--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
 
 #footer{
     width: 100%;
-    height: 140px;
+    height: x;
     background: #333333;
 }
 
@@ -71,5 +71,27 @@
 
 #header .container li{
     display:inline-block;
-    padding:10px;
+    padding:7px;
+}
+
+/* Banner */
+#cont_ban .container .flex-wrap{
+    display : flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#cont_ban .container #Banner{
+    width : 750px;
+    height : 450px;
+    margin-top : 30px;
+    background-size : contain;
+}
+
+.1{
+    background-image: url(./main.png);
+}
+
+.2{
+    background-image:url(./main2.png);
 }
