--- a/index.css
+++ b/index.css
@@ -4,94 +4,46 @@
     width: 100%;
 }
 
-#header{
-    width: 100%;
-    height: 100px;
-    background: #111111;
-}
-
 #content{
-    width: 100%;
-    background: #222222;
+    background-image: url(./메인.png);
+    width : 100%;
+    height : 3200px;
+    background-repeat: no-repeat;
+    background-size:100%;
+    z-index:-1;
 }
 
 #footer{
     width: 100%;
-    height: x;
-    background: #333333;
-}
-
-/* content layout */
-
-#cont_nav{
-    width: 100%;
-    height:100px;
-    background: #333333;
-}
-
-#cont_tit{
-    width: 100%;
-    height:200px;
-    background: #444444;
-    text-align: center;
-}
-
-#cont_ban{
-    width: 100%;
-    height:200px;
-    background: #555555;
-}
-
-#cont_cont{
-    width: 100%;
-    height:200px;
-    background: #666666;
+    height: 100px;
 }
 
 .container{
     width:990px;
     margin:0 auto;
     height : inherit;
-    background: rgb(255, 255, 255, 0.3);
 }
 
 /* Header */
-#header .container{
+#wrap .container{
     text-align: center;
     font-size:40px;
-    color:white;
 }
 
-#header .container ul{
+#wrap .container ul{
     margin : 0;
     position: absolute;
-    top:-10px;
+    top:20px;
     right:40px;
 }
 
-#header .container li{
+#wrap .container li{
     display:inline-block;
-    padding:7px;
+    padding:6px;
 }
 
-/* Banner */
-#cont_ban .container .flex-wrap{
-    display : flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-#cont_ban .container #Banner{
-    width : 750px;
-    height : 450px;
-    margin-top : 30px;
-    background-size : contain;
-}
-
-.1{
-    background-image: url(./main.png);
-}
-
-.2{
-    background-image:url(./main2.png);
+#footer .container p{
+    font-size:14px;
+    padding-top:20px;
+    color:#04a300;
 }
