--- a/find-store.css
+++ b/find-store.css
@@ -4,16 +4,10 @@
     width: 100%;
 }
 
-#header{
-    width: 100%;
-    height: 100px;
-    background: #111111;
-}
-
 #content{
     background-image: url(./메인.png);
     width : 100%;
-    height : 3200px;
+    height : 380%;
     background-repeat: no-repeat;
     background-size:100%;
     z-index:-1;
