--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 #content{
     background-image: url(./메인.png);
     width : 100%;
-    height : 3200px;
+    height : 380%;
     background-repeat: no-repeat;
     background-size:100%;
     z-index:-1;
