--- a/apply-lunchbox.css
+++ b/apply-lunchbox.css
@@ -5,9 +5,9 @@
 }
 
 #content{
-    background-image: url(./식당찾기.png);
+    background-image: url(./채식\ 도시락.png);
     width : 100%;
-    height : 130%;
+    height : 110%;
     background-repeat: no-repeat;
     background-size:100%;
     z-index:-1;
