--- a/find-store.css
+++ b/find-store.css
@@ -5,7 +5,7 @@
 }
 
 #content{
-    background-image: url(./식당찾기.png);
+    background-image: url(./식당찾기\ ㄹㅇ최종.png);
     width : 100%;
     height : 120%;
     background-repeat: no-repeat;
@@ -56,4 +56,8 @@
     height: 70px;
     top:32px;
     left:-210px;
+}
+
+#ad{
+    
 }
