--- a/recipe.css
+++ b/recipe.css
@@ -5,9 +5,9 @@
 }
 
 #content{
-    background-image: url(./메인\ 수정.png);
+    background-image: url(./채식\ 도시락-1.png);
     width : 100%;
-    height : 350%;
+    height : 200%;
     background-repeat: no-repeat;
     background-size:100%;
     z-index:-1;
